--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -187,3 +187,24 @@ input {
     margin-right: 10px;
     margin-bottom: 10px;
 }
+
+.button-container {
+    display: flex; /* Ativa o Flexbox */
+    justify-content: center; /* Centraliza os botões */
+    gap: 10px; /* Espaço entre os botões */
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    background-color: #007BFF;
+    color: white;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
